MDEV-36163 InnoDB assert with vector index under LOCK TABLES

let's unlock and relock hlindexes under LOCK TABLES.
an alternative would be to do start_stmt for them too,
but this is simpler and keeps them locked only for statements
that actually use them